--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <nav class="site-nav">
       <a href="{{ '/' | relative_url }}">Home</a>
       <a href="{{ '/about/' | relative_url }}">About</a>
-      <a href="mailto:aidan@aidanbevan.com">Contact</a>
+      <a href="{{ '/contact/' | relative_url }}">Contact</a>
     </nav>
   </div>
 </header>
