--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,9 @@
   <meta name="description" content="{{ page.description | default: site.description }}">
   <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
   
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="{{ '/assets/images/gymnast.png' | relative_url }}">
+  
   <!-- Google Fonts preconnect for performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
