--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -74,6 +74,9 @@ body {
 }
 
 .site-title {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
   font-family: $font-heading;
   font-size: 1.5rem;
   font-weight: 700;
@@ -85,6 +88,16 @@ body {
   &:hover {
     color: $color-accent-red;
   }
+}
+
+.site-logo {
+  width: 40px;
+  height: 40px;
+  object-fit: contain;
+  background-color: $color-bg-dark;
+  border-radius: 50%;
+  padding: 4px;
+  border: 2px solid $color-accent-red;
 }
 
 .site-nav {
